# terraphim-ai

./: .clippy.toml  .compliance-report.md  .cursorrules  .deployment-marker  .dockerignore  .env.example  .env.tauri-release  .env.template  .env.test  .gitignore  .gitmodules  .gitprivateignore  .handoff-pr2318.md  .handoff-structural-review-pr2628.md  .md  .pr-2318.diff  .pr2318.diff  .pr2664.diff  .pre-commit-config.yaml  .release-plz.toml  .repomixignore  .secrets.baseline  .security-audit-2026-04-20.md  .security_audit_2026-04-07.md  .sync_all.sh  .sync_cargo.sh  .sync_fcctl.sh  .sync_final2.sh  .sync_fire.sh  .sync_val.sh  .sync_validator.sh  1  1PASSWORD_SETUP.md  2025-10-07-this-session-is-being-continued-from-a-previous-co.txt  @lessons-learned.md  @memories.md  @memory.md  @scratchpad.md  @scratchpad_linting_fixes.md  AGENTS.md  (+350 more)
crates/claude-log-analyzer/: .gitignore  Cargo.toml  README.md
crates/claude-log-analyzer/src/: lib.rs  main.rs  models.rs  patterns.toml  reporter.rs  tool_analyzer.rs
crates/claude-log-analyzer/tests/: filename_target_filtering_tests.rs  integration_tests.rs  kg_integration_tests.rs  knowledge_graph_tests.rs  terraphim_integration_tests.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: lib.rs  main.rs
crates/config/test-data/: config.json  config.toml  config_shortcut.toml  config_updated.json  default_config.json
crates/dumb_critic_experiment/: Cargo.toml  README.md
crates/haystack_atlassian/: Cargo.toml  README.md  initiative_jira_claude.md
crates/haystack_core/: Cargo.toml
crates/haystack_discourse/: Cargo.toml
crates/haystack_grepapp/: Cargo.toml  README.md
crates/haystack_jmap/: Cargo.toml
crates/middleware/: Cargo.toml
crates/persistance/: Cargo.toml  README.md
crates/persistence/: Cargo.toml  README.md
crates/service/: Cargo.toml
crates/settings/: Cargo.toml  README.md
crates/terraphim-config-opendal/: Cargo.toml
crates/terraphim-markdown-parser/: CHANGELOG.md  Cargo.toml
crates/terraphim-session-analyzer/: Cargo.toml  DEMO.md  README.md  demo.sh
crates/terraphim_agent/: Cargo.toml  DEMO_README.md  DESIGN-guard-patterns-redesign.md  REPL_EXTRACTION_PLAN.md  VALIDATION_REPORT.md  build.rs  demo_script.sh  record_demo.sh
crates/terraphim_agent_application/: Cargo.toml
desktop-dioxus/: Cargo.toml  Dioxus.toml  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  PROGRESS.md  PROOF_OF_FUNCTIONALITY.md  README.md  RUNTIME_DEMONSTRATION.md  TEST_RESULTS.md
desktop-dioxus/src/: app.rs  global_shortcuts.rs  main.rs  system_tray.rs
desktop-dioxus/tests/: services_integration_test.rs
host-runners/: Cargo.toml
server/: Cargo.toml  README.md
server-axum/: Cargo.toml  README.md  api_curl.txt
server-axum/src/: api.rs  lib.rs  main.rs  types.rs
server/src/: api.rs  main.rs  settings.rs  types.rs
terraphim-ai-nodejs/: Cargo.toml  index.js  package.json
terraphim-ai-nodejs/src/: lib.rs
terraphim-core/: Cargo.toml
terraphim-core/src/: main.rs
terraphim_ai_nodejs/: Cargo.toml  NPM_PUBLISHING.md  PUBLISHING.md  README.md  debug_exports.js  index.d.ts  index.js  package-lock.json  package.json  test_autocomplete.js  test_knowledge_graph.js
terraphim_ai_nodejs/__test__/: index.spec.mjs  msteams-sdk-test.mjs
terraphim_ai_nodejs/src/: lib.rs
terraphim_desktop_iced/: Cargo.toml  README.md
terraphim_desktop_iced/src/: main.rs
terraphim_desktop_iced/tests/: e2e_tests.rs
terraphim_firecracker/: .gitignore  Cargo.toml  Earthfile_old  autologin.conf  config.toml  config3.json
terraphim_firecracker/atomic-server-infra/: Earthfile
terraphim_firecracker/configs/: test.toml
terraphim_firecracker/scripts/: cmdline.sh
terraphim_firecracker/src/: config.rs  lib.rs  main.rs  manager.rs
terraphim_server/: .gitignore  CHANGELOG.md  Cargo.toml  Earthfile  README.md  README_SYSTEM_OPERATOR.md  README_TERRAPHIM_ENGINEER.md  build.rs  http_api_curl.md  url_of_the_document
terraphim_server/conf/: working_settings.toml
terraphim_server/default/: ai_engineer_config.json  claude_md_config.json  combined_roles_config.json  context_engineer_config.json  default_role_config.json  devops_cicd_config.json  dynamic_ontology_config.json  email_monitor_config.json  frontend_engineer_config.json  local_knowledge_engineer_config.json  ollama_gemma_config.json  ollama_llama_config.json  persona_roles_config.json  python_engineer_config.json  quickwit_autodiscovery_config.json  quickwit_engineer_config.json  quickwit_production_config.json  rust_engineer_config.json  settings.toml  settings_default_server.toml  settings_rust_engineer_server.toml  settings_system_operator_server.toml  settings_terraphim_engineer_server.toml  system_operator_config.json  terraphim_engineer_config.json  terraphim_engineer_config_fixed.json  terraphim_engineer_config_with_openrouter.json  truthforge_config.json  truthforge_config_enhanced.json
terraphim_server/fixtures/: .gitignore  term_to_id.json  test_config.json
terraphim_server/src/: api.rs  api_conversations.rs  api_mcp.rs  api_mcp_openapi.rs  api_mcp_tools.rs  api_test.rs  error.rs  lib.rs  main.rs  mcp_auth.rs  truthforge_api.rs  truthforge_context.rs
terraphim_server/tests/: agent_web_flows_test.rs  api_context_tests.rs  debug_rolegraph.rs  default_role_integration_test.rs  e2e_kg_haystack_lookup_test.rs  frontend_engineer_integration_test.rs  health_contract_test.rs  kg_term_to_document_test.rs  llm_chat_matrix_test.rs  mcp_auth_tests.rs  mcp_persistence_integration.rs  mcp_sqlite_persistence.rs  ollama_api_test.rs  openrouter_api_test.rs  python_engineer_integration_test.rs  relevance_functions_duplicate_test.rs  rolegraph_visualization_test.rs  rust_engineer_enhanced_integration_test.rs  server.rs  simple_kg_lookup_test.rs  simple_workflow_test.rs  system_operator_integration_test.rs  terraphim_engineer_integration_test.rs  terraphim_graph_search_test.rs  trigger_index_fixture_test.rs  trigger_tfidf_verification_test.rs  truthforge_api_test.rs  tui_desktop_parity_test.rs  workflow_e2e_tests.rs
terraphim_types/: Cargo.toml
terraphim_types/src/: lib.rs
(+6033 files in other folders)
