
[workspace]
resolver = "2"
members = ["crates/*"]
exclude = [
    "crates/terraphim_agent_application",
    "crates/terraphim_truthforge",
    "crates/terraphim_validation",
    "crates/terraphim_rlm",
    "crates/terraphim_automata_py",  # PyO3 extension -- build with `maturin develop`
    "desktop",
    "desktop/src-tauri",  # Tauri desktop -- build separately via `cd desktop && yarn tauri build`
]
default-members = ["crates/terraphim_tinyclaw"]

[workspace.package]
version = "1.8.0"
edition = "2024"

[workspace.dependencies]
# OpenRouter AI integration dependencies
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Direct HTTP LLM client approach (removed rig-core)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"

# LLM Router integration

[patch.crates-io]
genai = { git = "https://github.com/terraphim/rust-genai.git", branch = "merge-upstream-20251103" }
self_update = { git = "https://github.com/AlexMikhalev/self_update.git", branch = "update-zipsign-api-v0.2" }

[profile.release]
panic = "unwind"
lto = false
codegen-units = 1
opt-level = 3

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

# CI-optimized profiles for faster builds with less disk usage
[profile.ci]
inherits = "dev"
incremental = false
codegen-units = 16
split-debuginfo = "off"
debug = false
strip = true

[profile.ci-release]
inherits = "release"
lto = "thin"
codegen-units = 8
strip = "symbols"
