
[workspace]
resolver = "2"
members = ["crates/*", "terraphim_server", "terraphim_firecracker", "terraphim_ai_nodejs"]
# Note: terraphim_usage and terraphim_ccusage are new crates in crates/*
exclude = [
    # terraphim-core crates (terraphim_types, terraphim_test_utils,
    # terraphim-markdown-parser, terraphim_automata, terraphim_rolegraph) were
    # extracted to the standalone terraphim-core repo and are now consumed from
    # the `terraphim` registry (E1, Gitea #1910).
    # terraphim-config-persistence crates were extracted to the standalone
    # terraphim-config-persistence repo and are consumed from the registry (E2, #1910).
    # terraphim-service crates: consumed from the `terraphim` registry (E3, #1910).
    # terraphim-agents crates: consumed from the `terraphim` registry (E4a, #1910).
    # terraphim-kg-agents crates: consumed from the `terraphim` registry (E4b, #1910).
    # clients-and-integrations crates: consumed from the `terraphim` registry (E5, #1910).
    # Empty / residual directories left after polyrepo extraction. They no longer
    # contain a top-level Cargo.toml and must be excluded so `crates/*` does not
    # match them (#2260).
    "crates/terraphim_atomic_client",
    "crates/terraphim_agent",
    "crates/terraphim_agent_evolution",
    "crates/terraphim_automata",
    "crates/terraphim_cli",
    "crates/terraphim_multi_agent",
    "crates/terraphim_orchestrator",
    "crates/terraphim_service",
    "crates/terraphim_settings",
    # Experimental crates
    "crates/terraphim_agent_application",
    "crates/terraphim_truthforge",
    # Python bindings (need `maturin develop`)
    "crates/terraphim_automata_py",
    "crates/terraphim_rolegraph_py",
    # Desktop built separately via Tauri CLI
    "desktop/src-tauri",
    # Planned future use, not needed for workspace builds
    "crates/terraphim_build_args",
    # Unused haystack providers (kept for future integration)
    "crates/haystack_atlassian",
    "crates/haystack_discourse",
    # Superseded by terraphim_agent
    "crates/terraphim_repl",
    # Symphony orchestrator (build separately: cd crates/terraphim_symphony && cargo build)
    "crates/terraphim_symphony",
    # Firecracker-based crates (private git dependency fcctl-core)
    # terraphim_rlm temporarily included for full configuration
    # "crates/terraphim_rlm",
    # terraphim_github_runner un-excluded for host-only reuse by terraphim_gitea_runner (#1910 M1).
    "crates/terraphim_github_runner_server",
]
default-members = ["terraphim_server"]

[workspace.package]
version = "1.20.3"
edition = "2024"
authors = ["Terraphim Team <team@terraphim.ai>"]
documentation = "https://terraphim.ai"
homepage = "https://terraphim.ai"
repository = "https://github.com/terraphim/terraphim-ai"
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
# OpenRouter AI integration dependencies
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
reqwest-middleware = { version = "0.4" }
reqwest-retry = { version = "0.7" }

# Direct HTTP LLM client approach (removed rig-core)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
tracing = "0.1"
tempfile = "3.27"

# Security: Force rustls 0.23+ to fix RUSTSEC-2026-0049
rustls = { version = "0.23", default-features = false }
# Security: Force rustls-webpki 0.103.12+ to fix RUSTSEC-2026-0049, 0098, 0099
rustls-webpki = "0.103.12"

# LLM Router integration

[patch.crates-io]
# genai patch temporarily disabled to test crates.io 0.6.0 compatibility for v1.20.0 publish chain.
# genai = { git = "https://github.com/terraphim/rust-genai.git", branch = "merge-upstream-20251103" }
self_update = { git = "https://github.com/AlexMikhalev/self_update.git", branch = "update-zipsign-api-v0.2" }
# Security: Patch tokio-tungstenite to use rustls 0.23+ for RUSTSEC-2026-0049
tokio-tungstenite = { git = "https://github.com/snapview/tokio-tungstenite.git", tag = "v0.28.0" }
# Security: Patch rustls-webpki to fix RUSTSEC-2026-0049 (CRL bypass), 0098, 0099 (name constraints)
# Using git source to force version override
rustls-webpki = { git = "https://github.com/rustls/webpki.git", tag = "v/0.103.12" }

[profile.release]
panic = "unwind"
lto = false
codegen-units = 1
opt-level = 3

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

# CI-optimized profiles for faster builds with less disk usage
[profile.ci]
inherits = "dev"
incremental = false
codegen-units = 16
split-debuginfo = "off"
debug = false
strip = true

[profile.ci-release]
inherits = "release"
lto = "thin"
codegen-units = 8
strip = "symbols"
