# Standalone workspace for host-only runner crates.
#
# These three crates are excluded from the main workspace (see root Cargo.toml
# `exclude`) because the Docker build context must not pull them in, and they
# are Linux-only / Firecracker-only.  However they still use workspace field
# inheritance (`edition.workspace = true`, `*.workspace = true` for deps), so
# they cannot be built standalone without a workspace root.
#
# This file provides that root.  Build and test with:
#
#   cd host-runners
#   cargo check --workspace
#   cargo test  -p terraphim_github_runner
#   cargo test  -p terraphim_github_runner_server
#   cargo test  -p terraphim_gitea_runner
#   cargo clippy --workspace -- -D warnings
#
# Relates to: Gitea #2956

[workspace]
resolver = "2"
members = [
    "../crates/terraphim_github_runner",
    "../crates/terraphim_github_runner_server",
    "../crates/terraphim_gitea_runner",
]

[workspace.package]
edition     = "2024"
rust-version = "1.91"

# Mirrors the versions pinned in the root Cargo.toml [workspace.dependencies].
# Crate-level Cargo.toml files reference these via `dep.workspace = true`.
[workspace.dependencies]
tokio       = { version = "1.0",  features = ["full"] }
serde       = { version = "1.0",  features = ["derive"] }
serde_json  = "1.0"
uuid        = { version = "1.21", features = ["v4", "serde"] }
chrono      = { version = "0.4",  features = ["serde"] }
async-trait = "0.1"
thiserror   = "1.0"
anyhow      = "1.0"
log         = "0.4"
tempfile    = "3.27"

