[package]
name = "terraphim_server"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "terraphim_server"
path = "src/main.rs"


[dependencies]
terraphim_config={path="../crates/config"}
terraphim_pipeline={path="../crates/terraphim_pipeline"}
terraphim_types= {path="../terraphim_types"}
terraphim_settings={path="../crates/settings"}
persistance = {path="../crates/persistance"}
terraphim_middleware={path="../crates/middleware"}
clap = { version = "4.4.18", features = ["derive"] }

axum = {version ="0.6.20", features = ["macros"]}
tokio = { version = "1.22.0", features = ["full"] }
serde = { version = "1.0.149", features = ["derive"] }
utoipa = { features = ["axum_extras"], version = "4.1.0" }
utoipa-swagger-ui = { features = ["axum"], version = "4.0.0" }
utoipa-redoc = { version = "*", features = ["axum"] }
utoipa-rapidoc = { version = "*", features = ["axum"] }
serde_json = "1.0.108"
ulid = {version = "1.0.0",features=["serde","uuid"]}
log = "0.4.14"
anyhow = "1.0.44"
portpicker = "0.1"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.2", features = ["cors"] }

[dev-dependencies]
reqwest = {version = "0.11", features = ["json","rustls-tls"]}
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.108"


