[package]
name = "terraphim_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = {version = "1.3.55", features = ["static-files","embed"]}
poem-openapi = { version="3.0.5", features = ["swagger-ui", "uuid"] }
tokio = { version="1.17.0", features = ["macros", "rt-multi-thread"] }
directories = ">= 2, < 5"
dotenv = "0.15"
config = "0.13.3"
tracing = "0.1.29"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
terraphim_config={path="../crates/config"}