[package]
edition = "2021"
name = "terraphim-ai-nodejs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi6"] }
napi-derive = "2.12.2"
terraphim_automata = { path = "../crates/terraphim_automata" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"

[workspace]
resolver = "2"