[package]
edition.workspace = true
name = "terraphim_ai_nodejs"
version = "1.0.0"
license = "MIT"

[lib]
name = "terraphim_ai_nodejs"
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.8.3", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "2.12.2"
serde_json = { workspace = true }
terraphim_automata = { path = "../crates/terraphim_automata", default-features = false }
terraphim_service = { path = "../crates/terraphim_service" }
terraphim_config = { path = "../crates/terraphim_config", default-features = false }
terraphim_persistence = { path = "../crates/terraphim_persistence" }
terraphim_settings = { path = "../crates/terraphim_settings" }
terraphim_types = { path = "../crates/terraphim_types", default-features = false }
terraphim_rolegraph = { path = "../crates/terraphim_rolegraph" }
anyhow = { workspace = true }
tokio = { workspace = true }
ahash = "0.8.12"
serde = { workspace = true }

[dev-dependencies]
tempfile = "3.14"

[build-dependencies]
napi-build = "2.3.1"

# NOTE: Profile configuration moved to workspace Cargo.toml for consistency
