[package]
name = "terraphim-firecracker"
version = "0.1.0"
edition = "2021"
authors = ["Terraphim AI Team"]
description = "Sub-2 second VM boot optimization system for Terraphim AI coding assistant"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
clap = { version = "4.0", features = ["derive"] }
config = "0.15"
async-trait = "0.1"
thiserror = "1.0"
parking_lot = "0.12"
dashmap = "5.5"
futures = "0.3"
fastrand = "2.0"
toml = "0.9"

[dev-dependencies]
tempfile = "3.0"
test-log = "0.2"

[[bin]]
name = "terraphim-vm-manager"
path = "src/main.rs"
