[package]
name = "terraphim_server"
version = "0.1.0"
edition = "2021"
authors = ["Terraphim Contributors"]
description = "Terraphim service handling the core logic of the Terraphim AI."
documentation = "https://terraphim.ai"
homepage = "https://terraphim.ai"
repository = "https://github.com/terraphim/terraphim-ai"
keywords = ["personal-assistant", "ai", "privacy", "service", "core"]
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
terraphim_persistence = { path = "../crates/terraphim_persistence", version = "0.1.0" }
terraphim_config = { path = "../crates/terraphim_config", version = "0.1.0" }
terraphim_middleware = { path = "../crates/terraphim_middleware", version = "0.1.0" }
terraphim_rolegraph = { path = "../crates/terraphim_rolegraph", version = "0.1.0" }
terraphim_settings = { path = "../crates/terraphim_settings", version = "0.1.0" }
terraphim_types = { path = "../crates/terraphim_types", version = "0.1.0" }
terraphim_automata = { path = "../crates/terraphim_automata", version = "0.1.0" }
terraphim_service = { path = "../crates/terraphim_service", version = "0.1.0" }

anyhow = "1.0.40"
axum = { version = "0.6.2", features = ["macros"] }
axum-extra = "0.8.0"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.14"
portpicker = "0.1"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.4.0", features = ["cors", "fs", "trace"] }
ulid = { version = "1.0.0", features = ["serde", "uuid"] }
mime_guess = "2.0.4"
tower = { version = "0.4", features = ["util"] }
rust-embed = { version = "8.2.0", features = ["axum", "axum-ex", "mime-guess"] }
env_logger = "0.11.3"
url = "2.5.0"
ahash = "0.8.11"
schemars = "0.8"
regex = "1.11.0"
walkdir = "2.4"

[features]
default = []
openrouter = ["terraphim_service/openrouter", "terraphim_config/openrouter"]

[dev-dependencies]
serial_test = "3.0.0"
tempfile = "3.10.1"
urlencoding = "2.1.3"
wiremock = "0.6"
tokio = { version = "1.35.1", features = ["full"] }

[build-dependencies]
static-files = "0.2"
walkdir = "2"
dircpy = "0.3.15"
