[package]
name = "terraphim_server"
version = "0.2.3"
edition = "2021"
authors = ["Terraphim Contributors"]
description = "Terraphim service handling the core logic of the Terraphim AI."
documentation = "https://terraphim.ai"
homepage = "https://terraphim.ai"
repository = "https://github.com/terraphim/terraphim-ai"
keywords = ["personal-assistant", "ai", "privacy", "service", "core"]
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
terraphim_persistence = { path = "../crates/terraphim_persistence", version = "0.2.0", features = ["server"] }
terraphim_config = { path = "../crates/terraphim_config", version = "0.2.0" }
terraphim_middleware = { path = "../crates/terraphim_middleware", version = "0.2.0" }
terraphim_rolegraph = { path = "../crates/terraphim_rolegraph", version = "0.2.0" }
terraphim_settings = { path = "../crates/terraphim_settings", version = "0.2.0" }
terraphim_types = { path = "../crates/terraphim_types", version = "0.2.0" }
terraphim_automata = { path = "../crates/terraphim_automata", version = "0.2.0", features = ["tokio-runtime"] }
terraphim_service = { path = "../crates/terraphim_service", version = "0.2.0" }
terraphim_multi_agent = { path = "../crates/terraphim_multi_agent", version = "0.2.0" }
terraphim_mcp_proxy = { path = "../crates/terraphim_mcp_proxy", version = "0.1.0" }


anyhow = "1.0.40"
axum = { version = "0.8.4", features = ["macros", "ws"] }
axum-extra = "0.10.1"
clap = { version = "4.5.49", features = ["derive"] }
log = "0.4.14"
portpicker = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.6.1", features = ["cors", "fs", "trace"] }
ulid = { version = "1.0.0", features = ["serde", "uuid"] }
mime_guess = "2.0.4"
tower = { version = "0.5.2", features = ["util"] }
rust-embed = { version = "8.2.0", features = ["axum", "axum-ex", "mime-guess"] }
env_logger = "0.11.8"
url = "2.5.0"
ahash = "0.8.11"
schemars = "0.8.22"
regex = "1.11.0"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures-util = "0.3"
rand = "0.8"
sha2 = "0.10"
opendal = "0.54"
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }

[features]
default = []
openrouter = ["terraphim_service/openrouter", "terraphim_config/openrouter"]
ollama = ["terraphim_service/ollama"]
# Optional database backends
sqlite = ["terraphim_persistence/services-sqlite"]
rocksdb = ["terraphim_persistence/services-rocksdb"]
redis = ["terraphim_persistence/services-redis"]
# Enable all database backends
full-db = ["sqlite", "rocksdb", "redis"]

[dev-dependencies]
serial_test = "3.0.0"
tempfile = "3.23.0"
urlencoding = "2.1.3"
tokio = { version = "1.35.1", features = ["full"] }
terraphim_tui = { path = "../crates/terraphim_tui", version = "0.2.0" }
axum-test = "17"
futures-util = "0.3"

[build-dependencies]
static-files = "0.2"
walkdir = "2"
dircpy = "0.3.15"

[package.metadata.deb]
maintainer = "Terraphim Contributors <team@terraphim.ai>"
copyright = "2024, Terraphim Contributors"
license-file = ["../LICENSE", "4"]
extended-description = """
Terraphim AI Server - Privacy-first AI assistant backend.
Provides HTTP API for semantic search and knowledge graphs.
Operates locally with support for multiple knowledge repositories."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/terraphim_server", "usr/bin/", "755"],
    ["default/*.json", "etc/terraphim-ai/", "644"],
    ["../README.md", "usr/share/doc/terraphim-ai/README", "644"],
]
