[package]
name = "terraphim_server"
version.workspace = true
edition.workspace = true
authors = ["Terraphim Contributors"]
description = "Terraphim service handling the core logic of the Terraphim AI."
documentation = "https://terraphim.ai"
homepage = "https://terraphim.ai"
repository = "https://github.com/terraphim/terraphim-ai"
keywords = ["personal-assistant", "ai", "privacy", "service", "core"]
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
terraphim_persistence = { path = "../crates/terraphim_persistence", version = "1.0.0", default-features = false, features = ["memory"] }
terraphim_config = { path = "../crates/terraphim_config", version = "1.0.0", default-features = false }
terraphim_middleware = { path = "../crates/terraphim_middleware", version = "1.0.0", default-features = false }
terraphim_rolegraph = { path = "../crates/terraphim_rolegraph", version = "1.0.0" }
terraphim_settings = { path = "../crates/terraphim_settings", version = "1.0.0" }
terraphim_types = { path = "../crates/terraphim_types", version = "1.0.0", default-features = false }
terraphim_automata = { path = "../crates/terraphim_automata", version = "1.0.0", default-features = false, features = ["tokio-runtime"] }
terraphim_service = { path = "../crates/terraphim_service", version = "1.0.0", default-features = false }
terraphim_multi_agent = { path = "../crates/terraphim_multi_agent", version = "1.0.0" }


anyhow = { workspace = true }
axum = { version = "0.8.7", features = ["macros", "ws"] }
axum-extra = { version = "0.10.1", optional = true }
clap = { version = "4.5.49", features = ["derive"] }
log = { workspace = true }
portpicker = "0.1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
ulid = { version = "1.0.0", features = ["serde", "uuid"] }
mime_guess = "2.0.4"
tower = { version = "0.5.3", features = ["util"] }
rust-embed = { version = "8.2.0", features = ["axum", "axum-ex", "mime-guess"], optional = true }
env_logger = "0.11.8"
url = "2.5.8"
ahash = "0.8.11"
schemars = { version = "0.8.22", optional = true }
regex = "1.11.0"
walkdir = "2.4"
chrono = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3"
rand = "0.9"

[features]
# Minimal default - core server with SQLite for persistence
default = ["sqlite", "embedded-assets"]

# LLM providers
openrouter = ["terraphim_service/openrouter", "terraphim_config/openrouter", "llm"]
ollama = ["terraphim_service/ollama", "llm"]
llm = []

# Database backends
sqlite = ["terraphim_persistence/sqlite"]
redis = ["terraphim_persistence/redis"]
s3 = ["terraphim_persistence/s3"]
dashmap = ["terraphim_persistence/dashmap"]
redb = ["terraphim_persistence/redb"]
ipfs = ["terraphim_persistence/ipfs"]
full-db = ["sqlite", "redis", "s3", "dashmap", "redb", "ipfs"]

# Middleware features
grepapp = ["terraphim_middleware/grepapp"]
ai-assistant = ["terraphim_middleware/ai-assistant"]
mcp = ["terraphim_middleware/mcp"]
mcp-rust-sdk = ["terraphim_middleware/mcp-rust-sdk"]

# Advanced features
vm-execution = []
workflows = []

# Server utilities
embedded-assets = ["dep:rust-embed"]
schema = ["dep:schemars", "terraphim_config/typescript"]

# Convenience features
full = ["full-db", "openrouter", "ollama", "grepapp", "ai-assistant", "mcp", "workflows", "schema"]

# Legacy aliases for backward compatibility
# Note: full-db is defined above

[dev-dependencies]
serial_test = "3.3.1"
terraphim_agent = { path = "../crates/terraphim_agent", version = "1.0.0" }
tempfile = "3.23.0"
urlencoding = "2.1.3"
tokio = { workspace = true }
axum-test = "18"
futures-util = "0.3"

[build-dependencies]
static-files = "0.2"
walkdir = "2"
dircpy = "0.3.15"

[package.metadata.deb]
maintainer = "Terraphim Contributors <team@terraphim.ai>"
copyright = "2024, Terraphim Contributors"
license-file = ["../LICENSE-Apache-2.0", "4"]
extended-description = """
Terraphim AI Server - Privacy-first AI assistant backend.
Provides HTTP API for semantic search and knowledge graphs.
Operates locally with support for multiple knowledge repositories."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/terraphim_server", "usr/bin/", "755"],
    ["default/*.json", "etc/terraphim-ai/", "644"],
    ["../README.md", "usr/share/doc/terraphim-ai/README", "644"],
]
